--- a/CoopDEJC/Views/Login/Login.cshtml
+++ b/CoopDEJC/Views/Login/Login.cshtml
@@ -6,32 +6,32 @@
     <title>CoopDEJC - Login</title>
 </head>
 <body>
-    <div>
+    <div class="header">
         @*Imagenes practicamente random, cambiar;*@
         <p><img src="~/img/logo.png" /> CoopDEJC</p>
         <a href="@Url.Action("Register","Login")">Register</a>
     </div>
-    <div>
+    <div class="container">
         <form action="@Url.Action("Index","Home") method="post">
             <center>
-                <div>
-                <img src="~/img/userlogo.png" />
-                <p>Sign In</p>
+                <div class="title">
+                    <img src="~/img/userlogo.png" />
+                    <p>Sign In</p>
                 </div>
-                <div>
-                <label for="email">Email</label>
-                <input name="email" type="email" required maxlength="100"/>
+                <div class= "textboxes">
+                    <label for="email">Email</label>
+                    <input class="" name="email" type="email" maxlength="100" required />
                 </div>
-                <div>
-                <label for="password">Password</label>
-                <input name="password" type="password" required maxlength="100"/>
+                <div class="textboxes">
+                    <label for="password">Password</label>
+                    <input name="password" type="password" maxlength="100" required />
                 </div>
-                <div>
+                <div class="textboxes">
                     <input name="rememberme" type="checkbox" />
                     <label for="rememberme">Remember me</label>
                     <a href="#">Forgot password?</a>
-                </div>
-                <div>
+                </div >
+                <div class="btnsubmit">
                     <input type="submit" value="Login" />
                 </div>
             </center>
