--- a/CoopDEJC/wwwroot/css/LoginCSS.css
+++ b/CoopDEJC/wwwroot/css/LoginCSS.css
@@ -5,7 +5,7 @@
     grid-template-rows: 10% 60% 30%;
 }
 html * {
-    font-family: 'Space Mono', monospace;;
+    font-family: 'Space Mono', monospace;
 }
 
 /* HEADER CSS */
