Fix an issue in MyProfile

--- a/CoopDEJC/Views/Home/MyProfile.cshtml
+++ b/CoopDEJC/Views/Home/MyProfile.cshtml
@@ -45,8 +45,10 @@
                     <input type="submit" value="Save changes" />
                     <button id="btnmacc">Manage Account</button>
                 </div>
-
             </form>
+            <div class="footer">
+
+            </div>
         </div>
     </body>
 </html>
