--- a/CoopDEJC/Views/Home/MyProfile.cshtml
+++ b/CoopDEJC/Views/Home/MyProfile.cshtml
@@ -43,9 +43,9 @@
                 </div>
                 <div class="btnsubmit">
                     <input type="submit" value="Save changes" />
-                    <button id="btnmacc">Manage Account</button>
                 </div>
             </form>
+            <button id="btnmacc" onclick=location.href="@Url.Action("ManageAccount","Home")">Manage Account</button>
             <div class="footer">
 
             </div>
