--- a/CoopDEJC/Views/Login/Login.cshtml
+++ b/CoopDEJC/Views/Login/Login.cshtml
@@ -16,7 +16,7 @@
         <a href="@Url.Action("Register","Login")">Register</a>
     </div>
     <div class="container">
-        <form action="@Url.Action("Index","Home") method="post">
+        <form action="@Url.Action("Prueba","Login")" method="post">
             <center class="formBox">
                 <div class="title">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="120" height="120"><path d="M4 22C4 17.5817 7.58172 14 12 14C16.4183 14 20 17.5817 20 22H18C18 18.6863 15.3137 16 12 16C8.68629 16 6 18.6863 6 22H4ZM12 13C8.685 13 6 10.315 6 7C6 3.685 8.685 1 12 1C15.315 1 18 3.685 18 7C18 10.315 15.315 13 12 13ZM12 11C14.21 11 16 9.21 16 7C16 4.79 14.21 3 12 3C9.79 3 8 4.79 8 7C8 9.21 9.79 11 12 11Z" fill="rgba(239,239,239,1)"></path></svg>
