Add MyProfile CSS, fix Login and Register Textfields and remove register icon

--- a/CoopDEJC/wwwroot/css/RegisterCSS.css
+++ b/CoopDEJC/wwwroot/css/RegisterCSS.css
@@ -2,7 +2,7 @@
     position: relative;
     margin: 0;
     display: grid;
-    grid-template-rows: 10% 60% 30%;
+    grid-template-rows: 10% 70% 20%;
 }
 
 html * {
@@ -49,7 +49,8 @@ html * {
     /*CONTAINER CSS*/
 
 .formBox {
-    width: 18rem;
+    width: 100%;
+    display:grid;
 }
 
 .container {
@@ -77,32 +78,52 @@ html * {
     column-gap: 1rem;
 }
 
-.input_box {
-    background: #EFEFEF;
+    .textboxes input {
+        background: transparent;
+        border: 2px solid rgb(239, 239, 239);
+        outline: none;
+        width: 100%;
+        height: 2.5rem;
+        resize: none;
+        color: #EFEFEF;
+        margin: 0 0 1rem 0;
+        text-indent: 6px;
+        font-size: medium;
+        font-weight: bold;
+        letter-spacing: 1px;
+        word-spacing: 2px;
+        border-radius: 5px;
+        transition: all 1s;
+    }
+
+.textboxes::placeholder {
+    color: transparent;
+}
+.textboxes input:focus {
+    border: 2px solid #EFEFEF;
+}
+.btnsubmit{
+    height:5rem;
+}
+.btnsubmit input{
+    display:grid;
+    font-size:medium;
+    font-weight:bold;
+    margin: 1rem 0 0 0;
     border: none;
     outline: none;
+    background: #205375;
+    cursor: pointer;
+    width: 18rem;
+    height: 3rem;
+    color: #EFEFEF;
+    font-weight: bold;
     border-radius: 0.4rem;
-    padding: 0 0 0 0.2rem;
-}
-.input_box:focus{
-    border:none;
-    outline:none;
+    transition: 200ms ease-out;
 }
 
-.input_box::placeholder{
-    padding:0 0 0 0.1rem;
-}
-.textboxes input {
-    outline: none;
-    resize: none;
-    border: none;
-}
-.textboxes input:focus{
-    outline: none;
-    border: none;
-}
-#mailInpt, #lctionInpt{
-    width: 100%;
+.btnsubmit input:hover{
+    color:#F66B0E;
 }
 /*FOOTER CSS*/
 .footer {
