--- a/CoopDEJC/Views/Home/MyProfile.cshtml
+++ b/CoopDEJC/Views/Home/MyProfile.cshtml
@@ -1,15 +1,14 @@
 ﻿@{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "My Profile";
     Layout = null;
 }
 <html>
     <head>
-        <link href="~/css/IndexCSS.css" rel="stylesheet" type="text/css"/>
+        <link href="~/css/MyProfileCSS.css" rel="stylesheet" type="text/css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
     </head>
-
     <body>
         <div class="wrapper">
             <div class="sidebar">
@@ -18,7 +17,7 @@
                  <p>Nombre del usuario</p>
                  <ul>
                      <li>
-                        <a href="#">
+                        <a href="@Url.Action("Index","Home")">
                             <img src="~/img/Home-Index.svg"/><span>Index</span>
                         </a>
                      </li>
@@ -43,73 +42,47 @@
         <div class="header">
             <a href=@Url.Action("SignOut","Login")>Sign Out</a>
         </div>
-
-        <div class="container"> 
+        <div class="container">
             <div class="title">
-                <h2>Dashboard</h2>
+                <h2>My Profile</h2>
                 <span></span>
             </div>
+            <form class="formbox">
+                <div class="textboxes">
+                    <input id="inptName" name="name" type="text" maxlength="100" placeholder="Name" required />
+                    <label id="lblName" for="name">Name</label>
 
-            <div class="suminfo">
-                <div class="investment">
-                    <center>
-                        <h4>Your Investment</h4>
-                        <h3>$10,000.00</h3>
-                        <br />
-                        <h5>**** **** **** 1234</h5>
-                        <p>DOP</p>
-                    </center>
+                    <input id="inptLast" name="lname" type="text" maxlength="100" required />
+                    <label id="lblLast" for="lname">Last Name</label>
+
+                    
+                    <input id="inptMail" name="email" type="email" maxlength="100" autocomplete="off" required />
+                    <label id= "lblMail" for="email">Email</label>
                 </div>
+                <div class="textboxes">
+                    <input id="inptID" name="id" type="text" maxlength="13" minlength="13" required />
+                    <label id="lblID" for="id">ID</label>
 
-                <div class="debts">
-                    <center>
-                        <h4>Debts</h4>
-                        <br />
-                        <h5>$1200</h5>
-                    </center>
+                    <input id="inptLocat" name="location" type="text" required />
+                    <label id="lblLocat" for="location">Location</label>
+
+                    <input id="inptNum" name="phone" type="tel" maxlength="12" minlength="12" required />
+                    <label id="lblNum" for="phone">Phone Number</label>
                 </div>
-
-                <div class="inverted">
-                    <center>
-                        <h4>Inverted</h4>
-                        <br />
-                        <h5>$5000</h5>
-                    </center>
+                <div class="textboxes">
+                    <input id="inptPass" name="password" type="password" maxlength="100" required />
+                    <label id="lblPass" for="password">Password</label>
+                    
+                    <input id="inptSect" name="securityq" type="text" required />
+                    <label id="lblSect" for="securityq">Security Question</label>
                 </div>
+                <div class="btnsubmit">
+                    <input id="subtmit" type="submit" value="Save changes" />
+                    <button id="btnmacc">Manage Account</button>
+                </div>
+            </form>
+            <div class="footer">
             </div>
- 
-            <div class="calendar">
-                @*Aquí va el calendario*@
-            </div>
-            <div class="invlist">
-                <h3>Investment List</h3>
-                <ul>
-                    <li>
-                        <h5>Investment list1</h5>
-                        <p>$1,500.00</p>
-                    </li>
-                    <li>
-                        <h5>Investment list2</h5>
-                        <p>$500.00</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="deblist">
-                <h3>Debt List</h3>
-                <ul>
-                    <li>
-                        <h5>Debt House</h5>
-                        <p>$15,000.00</p>
-                    </li>
-                    <li>
-                        <h5>Debt Transportation</h5>
-                        <p>$2,000.00</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="footer">
-
         </div>
     </body>
 </html>
