Add atributte 'Autocomplete = off' in some views, and add LoansController and Loans View

--- a/CoopDEJC/Views/Home/Index.cshtml
+++ b/CoopDEJC/Views/Home/Index.cshtml
@@ -16,11 +16,11 @@
                 </div>
                 <form>
                     <div class="textboxes">
-                        <input type="text" minlength="10" maxlength="10" placeholder = "Account Number" required />
-                        <input type="text" maxlenght = "100" placeholder = "Bank Name" required />
+                        <input type="text" minlength="10" maxlength="10" placeholder="Account Number" autocomplete="off" required />
+                        <input type="text" maxlenght="100" placeholder="Bank Name" autocomplete="off" required />
                     </div>
                     <div class="textboxes">
-                        <input type="text" maxlength="100" placeholder = "Location" required />
+                        <input type="text" maxlength="100" placeholder="Location" autocomplete="off" required />
 
                         <!--Agregar un color gris a la primera opción, para que quede a juego con los demás placeholders-->
                         <select id="typeacc" required>
