--- a/CoopDEJC/Views/Home/MyProfile.cshtml
+++ b/CoopDEJC/Views/Home/MyProfile.cshtml
@@ -16,30 +16,30 @@
             <form>
                 <div class="textboxes">
                     <label for="name">Name</label>
-                    <input name="name" type="text" maxlength="100" required />
+                    <input name="name" type="text" maxlength="100" autocomplete="off" required />
 
                     <label for="lname">Last Name</label>
-                    <input name="lname" type="text" maxlength="100" required />
+                    <input name="lname" type="text" maxlength="100" autocomplete="off" required />
 
                     <label for="email">Email</label>
-                    <input name="email" type="email" maxlength="100" required />
+                    <input name="email" type="email" maxlength="100" autocomplete="off" required />
                 </div>
                 <div class="textboxes">
                     <label for="id">ID Card</label>
-                    <input name="id" type="text" maxlength="13" minlength="13" required />
+                    <input name="id" type="text" maxlength="13" minlength="13" autocomplete="off"  required />
 
                     <label for="location">Location</label>
-                    <input name="location" type="text" required />
+                    <input name="location" type="text" autocomplete="off" required />
 
                     <label for="phone">Phone Number</label>
-                    <input name="phone" type="tel" maxlength="12" minlength="12" required />
+                    <input name="phone" type="tel" maxlength="12" minlength="12" autocomplete="off" required />
                 </div>
                 <div class="textboxes">
                     <label for="password">Password</label>
-                    <input name="password" type="password" maxlength="100" required />
+                    <input name="password" type="password" maxlength="100" autocomplete="off" required />
 
                     <label for="securityq">Security Question</label>
-                    <input name="securityq" type="text" required />
+                    <input name="securityq" type="text" autocomplete="off" required />
                 </div>
                 <div class="btnsubmit">
                     <input type="submit" value="Save changes" />
