--- a/CoopDEJC/wwwroot/css/IndexCSS.css
+++ b/CoopDEJC/wwwroot/css/IndexCSS.css
@@ -2,13 +2,16 @@
     position: relative;
     margin: 0;
     display: grid;
+    background:#EFEFEF;
     grid-template-areas:
         "a b b"
         "a c c";
     grid-template-columns: 10% 90% 0;
-    /*grid-template-rows: 10% 60% 30%;*/
+    grid-template-rows: 10% 90%;
 }
-
+live-preview-root{
+    display:none;
+}
 html * {
     font-family: 'Space Mono', monospace;
 }
@@ -84,6 +87,8 @@ html * {
 .container{
     display:grid;
     grid-area:c;
+    grid-template-rows: 15% 50% 35%;
+    grid-template-columns:50% 50%;
     grid-template-areas:
         "a a"
         "c b"
@@ -115,28 +120,135 @@ html * {
     display:grid;
     width:inherit;
     height:inherit;
-    justify-content:center;
+    justify-content:start;
+    margin: 0 0 0 3rem;
     grid-area:c;
+    grid-template-columns: 12rem 12rem;
+    grid-template-rows: 10rem 10rem;
     grid-template-areas:
         "a a"
         "b c";  
 }
 .investment {
+    display: inherit;
     width: 20rem;
-    height: 2rem;
-    background: #205375;
+    height: 10rem;
+    justify-self: self-start;
+    align-self: center;
+    justify-content: start;
+    align-content: center;
+    background: linear-gradient(-30deg, rgb(17, 43, 60, 0.8) -20%,rgb(32, 83, 117, 0.4)70%);
+    /*background: rgb(32, 83, 117, 0.5);*/
+    border-radius: 2rem;
+    color: #112B3C;
+    font-weight:bold;
     grid-area: a;
 }
+.investment h4, .investment h3, .investment h5{
+    margin: 0 0 1rem 1rem;
+}
+.investment h3{
+    position:relative;
+    right:1rem;
+}
 .debts{
+    display: grid;
+    align-content:center;
+    width:100%;
+    height:100%;
     grid-area: b;
 }
-.inverted{
+.debts hr{
+    width:2rem;
+    height:2px;
+    border:none;
+    background:#F66B0E;
+    border-radius:2rem
+}
+.debts h5,.debts h4{
+    margin:0;
+}
+.debts center{
+    display:grid;
+    margin: 0;
+    justify-content:center;
+    align-content: center;
+    background:rgb(32, 83, 117, 0.4);
+    height:6rem;
+    border-radius: 1rem;
+    box-shadow:2px 2px 2px rgb(17, 43, 60, 0.6);
+}
+
+.inverted {
+    display: grid;
+    align-content: center;
+    width: 100%;
+    height: 100%;
+    margin: 0 0 0 2rem;
     grid-area: c;
 }
 
+.inverted hr {
+    width: 2rem;
+    height: 2px;
+    border: none;
+    background: #F66B0E;
+    border-radius: 2rem
+}
+
+.inverted h5, .inverted h4 {
+    margin: 0;
+}
+.inverted center {
+    display: grid;
+    margin: 0;
+    justify-content: center;
+    align-content: center;
+    background: rgb(32, 83, 117, 0.4);
+    height: 6rem;
+    border-radius: 1rem;
+    box-shadow: 2px 2px 2px rgb(17, 43, 60, 0.6);
+}
 .invlist{
+    display:grid;
+    grid-template-rows:2rem 11rem;
     grid-area:d;
 }
+.invlist h3, .deblist h3{
+    margin: 0 0 0 2rem;
+}
+.invUl, .debUl{
+    list-style:none;
+    height:inherit;
+    margin:0;
+    padding: 0 0 0 2rem;
+}
+#invLi, #debLi {
+    display:grid;
+    align-content:center;
+    background: rgb(17, 43, 60, 0.8);
+    border-radius: 6px;
+    width: 30rem;
+    height: 4rem;
+    margin:  1rem 0 1rem 0;
+    color: #EFEFEF;
+    cursor: pointer;
+}
+#invLi h5, #debLi h5{
+    display:flex;
+}
 .deblist{
+    display: grid;
+    grid-template-rows: 2rem 11rem;
     grid-area:e;
+}
+
+#invLi h5,#debLi h5{
+    
+}
+#invLi p, #debLi p{
+    position:relative;
+    bottom:1rem;
+    left:1rem;
+    margin:0;
 }
